--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.2",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -14,8 +17,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "move-build": "mkdir -p ../main/resources/static && mv build/* ../main/resources/static/",
+    "clean-old-build": "rm -rf ../main/resources/static/* ",
+    "clean-new-build": "rm -rf build",
+    "postbuild": "npm run clean-old-build && npm run move-build && npm run clean-new-build"
   },
   "eslintConfig": {
     "extends": [
